cmake_minimum_required(VERSION 2.8)

file(GLOB CPP "*.cpp")
add_library(yield STATIC ${CPP}) 

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	target_link_libraries(yield rt stdc++)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
	target_link_libraries(yield m rt stdc++)
endif()

add_subdirectory(fs)
add_subdirectory(http)
add_subdirectory(i18n)
add_subdirectory(poll)
add_subdirectory(queue)
add_subdirectory(sockets)
add_subdirectory(stage)
add_subdirectory(thread)
add_subdirectory(uri)
