cmake_minimum_required(VERSION 2.8)

file(GLOB CPP "*.cpp")
add_executable(yield_test ${CPP})
add_dependencies(yield_test yield)
if (WIN32)
	target_link_libraries(yield_test yield gtestd)
else()
	target_link_libraries(yield_test yield gtest)
endif()

# add_subdirectory(fs)
# add_subdirectory(http)
# add_subdirectory(i18n)
# add_subdirectory(poll)
# add_subdirectory(sockets)
# add_subdirectory(stage)
# add_subdirectory(thread)
add_subdirectory(uri)
