cmake_minimum_required(VERSION 2.8)

file(GLOB CPP *.cpp *.hpp)
add_executable(yield_test ${CPP})
target_link_libraries(yield_test yield gtest)
add_subdirectory(fs)
add_subdirectory(http)
add_subdirectory(i18n)
add_subdirectory(poll)
add_subdirectory(queue)
add_subdirectory(sockets)
add_subdirectory(stage)
add_subdirectory(thread)
add_subdirectory(uri)
