cmake_minimum_required(VERSION 2.8)

file(GLOB CPP *.cpp *.hpp)
add_executable(yield_test ${CPP})
add_test(yield_test yield_test --gtest_output=xml:${CMAKE_BINARY_DIR}/gtest_output/yield_test.xml)
target_link_libraries(yield_test yield gtest)

add_subdirectory(fs)
add_subdirectory(http)
add_subdirectory(i18n)
add_subdirectory(poll)
add_subdirectory(queue)
add_subdirectory(sockets)
add_subdirectory(stage)
add_subdirectory(thread)
add_subdirectory(uri)
