cmake_minimum_required(VERSION 2.8)

if (UNIX)
  file(GLOB CPP posix/*.cpp ../../../include/yield/i18n/*.hpp)
elseif (WIN32)
	file(GLOB CPP win32/*.cpp ../../../include/yield/i18n/*.hpp)
endif()
add_library(yield.i18n STATIC ${CPP})
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(PLATFORM_TARGET_LINK_LIBRARIES "iconv ")
elseif (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
	set(PLATFORM_TARGET_LINK_LIBRARIES "iconv intl ")
elseif (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
	set(PLATFORM_TARGET_LINK_LIBRARIES "iconv ")
endif()
target_link_libraries(yield.i18n "${PLATFORM_TARGET_LINK_LIBRARIES}yield")
