cmake_minimum_required(VERSION 2.8)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  file(GLOB CPP darwin/*.cpp posix/*.cpp ../../../include/yield/thread/*.hpp)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  file(GLOB CPP linux/*.cpp posix/*.cpp ../../../include/yield/thread/*.hpp)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
  file(GLOB CPP posix/*.cpp sunos/*.cpp ../../../include/yield/thread/*.hpp)
elseif (WIN32)
	file(GLOB CPP win32/*.cpp ../../../include/yield/thread/*.hpp)
endif()
add_library(yield.thread STATIC ${CPP})

set(LIBS yield)
if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
	LIST(APPEND LIBS pthread)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	LIST(APPEND LIBS pthread)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
	LIST(APPEND LIBS kstat)
endif()
target_link_libraries(yield.thread ${LIBS})
