if (WIN32)
	file(GLOB CPP *.cpp win32/*.cpp)
else()
	file(GLOB CPP *.cpp)
endif()
add_executable(yield.sockets.aio_test ${CPP})
add_test(yield.sockets.aio_test yield.sockets.aio_test --gtest_output=xml:${CMAKE_BINARY_DIR}/gtest_output/yield.socket.aio_test.xml)
target_link_libraries(yield.sockets.aio_test yield.fs yield.sockets.aio gtest)
